@@ -3,15 +3,12 @@ package com.c208.sleephony.domain.sleep.service;
 import com.c208.sleephony.domain.sleep.dto.SleepPredictionResult;
 import com.c208.sleephony.domain.sleep.dto.request.BioDataRequest;
 import com.c208.sleephony.domain.sleep.dto.request.StatisticsRequest;
-import com.c208.sleephony.domain.sleep.dto.response.CombinedStatResponse;
-import com.c208.sleephony.domain.sleep.dto.response.GraphResponse;
-import com.c208.sleephony.domain.sleep.dto.response.SleepGraphPoint;
-import com.c208.sleephony.domain.sleep.dto.response.SummaryResponse;
+import com.c208.sleephony.domain.sleep.dto.response.*;
 import com.c208.sleephony.domain.sleep.entity.*;
-import com.c208.sleephony.domain.sleep.repositroy.BioRepository;
-import com.c208.sleephony.domain.sleep.repositroy.SleepLevelRepository;
-import com.c208.sleephony.domain.sleep.repositroy.SleepReportRepository;
-import com.c208.sleephony.domain.sleep.repositroy.SleepStatisticRepository;
+import com.c208.sleephony.domain.sleep.repository.BioRepository;
+import com.c208.sleephony.domain.sleep.repository.SleepLevelRepository;
+import com.c208.sleephony.domain.sleep.repository.SleepReportRepository;
+import com.c208.sleephony.domain.sleep.repository.SleepStatisticRepository;
 import com.c208.sleephony.domain.user.entity.User;
 import com.c208.sleephony.domain.user.repsotiry.UserRepository;
 import com.c208.sleephony.global.exception.RedisOperationException;
@@ -24,10 +21,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.reactive.function.client.WebClient;
+
 
 import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.time.format.TextStyle;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -45,7 +45,28 @@ public class SleepService {
     private final GptClient gptClient;
     private final UserRepository userRepository;
     private final SleepStatisticRepository sleepStatisticRepository;
+    private final WebClient fastApiWebClient;
 
+    /**
+     * Fast API 모델에 생체 데이터를 전송해 <b>즉시</b> 수면 단계를 예측합니다.
+     *
+     * @param requestDto 센서 1 윈도우(5초) × N 의 원시 데이터
+     * @return 예측 결과(수면 단계·신뢰도·측정시각)
+     * @throws RuntimeException Fast API Timeout / 4xx/5xx 응답 시
+     */
+    public SleepPredictionResult analyzeSleepStageDirectly(BioDataRequest requestDto) {
+        return fastApiWebClient.post()
+                .uri("/api/ai/sleep-stage")
+                .bodyValue(requestDto)
+                .retrieve()
+                .bodyToMono(SleepPredictionResult.class)
+                .block(Duration.ofSeconds(5));  // 타임아웃 설정
+    }
+    /**
+     * 단말에서 1 초 주기로 올라온 센서 데이터를 저장 + <br>
+     * {@link #predictAndSaveAll(List)} 로 자체 룰 기반 예측 후
+     * <b>첫 윈도우 결과만</b> 반환합니다.
+     */
     public SleepPredictionResult measureSleepStage(BioDataRequest requestDto) {
         try {
             LocalDateTime baseTime = LocalDateTime.parse(requestDto.getMeasuredAt());
@@ -77,6 +98,12 @@ public class SleepService {
             throw new SleepPredictionException("수면 단계 예측 중 오류가 발생했습니다.", e);
         }
     }
+
+    /**
+     *  30 개 Bio 데이터(≈ 30 초) 리스트 → 각 윈도우별 수면 단계 예측 &amp; 저장.
+     *
+     * @return 윈도우별 예측 결과 전체
+     */
     public List<SleepPredictionResult> predictAndSaveAll(List<BioData> dataList) {
         try {
             List<SleepLevel> entities = new ArrayList<>();
@@ -103,6 +130,12 @@ public class SleepService {
         }
     }
 
+    /**
+     * 지정 구간(start~end)의 Bio 데이터를 30 초 윈도우로 슬라이딩하며
+     * <b>일괄 재예측</b> 합니다.
+     *
+     * @return 재예측된 Sleep Level 리스트
+     */
     public List<SleepPredictionResult> predictFromBioDataByRange(
             LocalDateTime startDateTime,
             LocalDateTime endDateTime
@@ -196,37 +229,9 @@ public class SleepService {
         return results;
     }
 
-    private SleepPredictionResult predict(BioData data) {
-        double gyroMagnitude = Math.sqrt(
-                Math.pow(data.getGyroX(), 2) +
-                        Math.pow(data.getGyroY(), 2) +
-                        Math.pow(data.getGyroZ(), 2)
-        );
-
-        String level;
-        int score;
-
-        if (gyroMagnitude > 4.0) {
-            level = "AWAKE";
-            score = random(5, 20);
-        } else if (data.getHeartRate() < 60 && data.getBodyTemperature() < 36.0) {
-            level = "NREM3";
-            score = random(90, 100);
-        } else if (data.getHeartRate() < 70) {
-            level = "NREM2";
-            score = random(70, 90);
-        } else {
-            level = "REM";
-            score = random(60, 80);
-        }
-
-        return new SleepPredictionResult(level, score, data.getMeasuredAt());
-    }
-
-    private int random(int min, int max) {
-        return new Random().nextInt(max - min + 1) + min;
-    }
-
+    /**
+     * 측정 시작 시각을 24h TTL 로 Redis(`sleep:start:{userId}`)에 기록합니다.
+     */
     public String startMeasurement(LocalDateTime startedAt) {
         Integer userId = AuthUtil.getLoginUserId();
         String key = "sleep:start:" + userId;
@@ -237,7 +242,9 @@ public class SleepService {
             throw new RedisOperationException("Redis에 측정 시작 시각 저장 중 오류가 발생했습니다.", e);
         }
     }
-
+    /**
+     * 측정 종료 → Redis 시작시각을 꺼내 서머리 계산 → SleepReport 저장.
+     */
     public SleepReport generateSleepReport(LocalDateTime endedAt) {
         Integer userId = AuthUtil.getLoginUserId();
         String key = "sleep:start:" + userId;
@@ -312,17 +319,35 @@ public class SleepService {
 
         return sleepReportRepository.save(report);
     }
-
-    public SleepReport getReportByDate(LocalDate date) {
+    /**
+     * <b>특정 일자</b>의 리포트와 전일(있는 경우) 총 수면시간을 함께 반환합니다.
+     */
+    public SleepReportWithPrevious getReportByDate(LocalDate date) {
         Integer userId = AuthUtil.getLoginUserId();
-        LocalDateTime from = date.atStartOfDay();
-        LocalDateTime to = date.plusDays(1).atStartOfDay();
+        LocalDateTime todayFrom = date.atStartOfDay();
+        LocalDateTime todayTo = date.plusDays(1).atStartOfDay();
 
-        return sleepReportRepository
-                .findFirstByUserIdAndSleepTimeBetween(userId, from, to)
+        LocalDateTime prevFrom = date.minusDays(1).atStartOfDay();
+        LocalDateTime prevTo   = date.atStartOfDay();
+
+        SleepReport todayReport = sleepReportRepository
+                .findFirstByUserIdAndSleepTimeBetween(userId, todayFrom, todayTo)
                 .orElseThrow(() -> new SleepReportNotFoundException("해당 날짜 리포트가 없습니다."));
-    }
 
+        SleepReport prevReport = sleepReportRepository
+                .findFirstByUserIdAndSleepTimeBetween(userId, prevFrom, prevTo)
+                .orElse(null);
+        int prevTotalSleep = prevReport != null
+                ? toMinutes(prevReport.getSleepTime(), prevReport.getSleepWakeTime())
+                : 0;
+        return SleepReportWithPrevious.builder()
+                .todayReport(todayReport)
+                .previousTotalSleepMinutes(prevTotalSleep)
+                .build();
+    }
+    /**
+     * 일자별 수면 단계 그래프용 원본 점(TimePoint)을 반환합니다.
+     */
     public List<SleepGraphPoint> getSleepGraphPoints(LocalDate date) {
         Integer userId = AuthUtil.getLoginUserId();
         LocalDateTime start = date.atStartOfDay();
@@ -339,9 +364,14 @@ public class SleepService {
                 .toList();
     }
 
-    public String advise(SleepReport report) {
+    /**
+     * GPT 모델에 오늘 리포트를 보내 500자 이상 코칭 문구를 받아옵니다.
+     *  – 하루 1 회 캐싱(Redis key : sleep:advice:{user}:{date})
+     */
+    public String advise(SleepReportWithPrevious report) {
         Integer userId = AuthUtil.getLoginUserId();
-        LocalDate reportDate = report.getSleepTime().toLocalDate(); // 수면 시작 날짜 기준
+        SleepReport todayReport = report.getTodayReport();
+        LocalDate reportDate = todayReport.getSleepTime().toLocalDate(); // 수면 시작 날짜 기준
 
         String redisKey = "sleep:advice:" + userId + ":" + reportDate;
         String cachedAdvice = stringRedisTemplate.opsForValue().get(redisKey);
@@ -370,13 +400,13 @@ public class SleepService {
                         
                         최소 500자 이상으로 매우 구체적이고 실질적인 피드백을 제공하세요.
                         """,
-                report.getSleepScore(),
-                toMinutes(report.getSleepTime(), report.getSleepWakeTime()),
-                report.getRemTime(),
-                report.getNremTime(),
-                report.getDeepTime(),
-                report.getAwakeTime(),
-                report.getSleepCycle());
+                todayReport.getSleepScore(),
+                toMinutes(todayReport.getSleepTime(), todayReport.getSleepWakeTime()),
+                todayReport.getRemTime(),
+                todayReport.getNremTime(),
+                todayReport.getDeepTime(),
+                todayReport.getAwakeTime(),
+                todayReport.getSleepCycle());
 
         // WebClient 는 reactive 이므로 block() 으로 동기화
         String advice = gptClient.getAdvice(prompt).block();
@@ -385,64 +415,91 @@ public class SleepService {
         return advice;
     }
 
-    private int toMinutes(LocalDateTime from, LocalDateTime to) {
-        return (int) java.time.Duration.between(from, to).toMinutes();
-    }
-
+    /**
+     * <h3>Summary API</h3>
+     * <ul>
+     *   <li>요청 기간의 리포트만 집계, <b>리포트가 있는 날 수(분모)</b>로 나눔</li>
+     *   <li>동일 길이의 “이전 기간” 평균 수면시간도 함께 반환</li>
+     * </ul>
+     *
+     * @return {@link SummaryResponse}
+     */
     public SummaryResponse summarize(StatisticsRequest req) {
         Integer userId = AuthUtil.getLoginUserId();
-        List<SleepReport> reports = fetchReports(userId, req);
+        List<SleepReport> currentReports  = fetchReports(userId, req);
 
-        if (reports.isEmpty()) {
+        if (currentReports .isEmpty()) {
             throw new SleepReportNotFoundException("해당 기간 중 기록된 수면 리포트가 없습니다.");
         }
 
+        long days = ChronoUnit.DAYS.between(req.getStartDate(), req.getEndDate()) + 1;
+        LocalDate prevEndDate = req.getStartDate().minusDays(1);
+        LocalDate prevStartDate = prevEndDate.minusDays(days - 1);
+        StatisticsRequest prevReq = new StatisticsRequest(prevStartDate, prevEndDate, req.getPeriodType());
+        List<SleepReport> previousReports = fetchReports(userId, prevReq);
+
+        long prevDaysWithReport = previousReports.stream()
+                .map(r -> r.getSleepTime().toLocalDate())
+                .distinct()
+                .count();
+        long prevSumTime = previousReports.stream()
+                .mapToLong(r ->
+                        Duration.between(r.getSleepTime(), r.getSleepWakeTime()).toMinutes()
+                )
+                .sum();
+        int prevAvgTime = prevDaysWithReport == 0
+                ? 0
+                : (int) Math.round((double) prevSumTime / prevDaysWithReport);
+
         // “리포트가 있는 날짜 수” 계산
-        long daysWithReport = reports.stream()
+        long daysWithReport = currentReports .stream()
                 .map(r -> r.getSleepTime().toLocalDate())
                 .distinct()
                 .count();
         // 합계 계산
-        double sumScore   = reports.stream().mapToInt(SleepReport::getSleepScore).sum();
-        double sumTime    = reports.stream()
+        double sumScore   = currentReports .stream().mapToInt(SleepReport::getSleepScore).sum();
+        double sumTime    = currentReports .stream()
                 .mapToLong(r -> Duration.between(r.getSleepTime(), r.getSleepWakeTime()).toMinutes())
                 .sum();
-        double sumLatency = reports.stream()
+        double sumLatency = currentReports .stream()
                 .mapToLong(r -> Duration.between(r.getSleepTime(), r.getRealSleepTime()).toMinutes())
                 .sum();
-        double sumLight   = reports.stream().mapToInt(SleepReport::getNremTime).sum();
-        double sumRem     = reports.stream().mapToInt(SleepReport::getRemTime).sum();
-        double sumDeep    = reports.stream().mapToInt(SleepReport::getDeepTime).sum();
-        double sumAwake   = reports.stream().mapToInt(SleepReport::getAwakeTime).sum();
-        double sumCycles  = reports.stream().mapToInt(SleepReport::getSleepCycle).sum();
+        double sumLight   = currentReports .stream().mapToInt(SleepReport::getNremTime).sum();
+        double sumRem     = currentReports .stream().mapToInt(SleepReport::getRemTime).sum();
+        double sumDeep    = currentReports .stream().mapToInt(SleepReport::getDeepTime).sum();
+        double sumAwake   = currentReports .stream().mapToInt(SleepReport::getAwakeTime).sum();
+        double sumCycles  = currentReports .stream().mapToInt(SleepReport::getSleepCycle).sum();
 
         // “리포트 있는 일수”로 나눈 평균
-        float avgScore     = (float)(sumScore   / daysWithReport);
-        float avgTime      = (float)(sumTime    / daysWithReport);
-        float avgLatency   = (float)(sumLatency / daysWithReport);
-        float avgLight     = (float)(sumLight   / daysWithReport);
-        float avgRem       = (float)(sumRem     / daysWithReport);
-        float avgDeep      = (float)(sumDeep    / daysWithReport);
-        float avgAwake     = (float)(sumAwake   / daysWithReport);
-        float avgCycles    = (float)(sumCycles  / daysWithReport);
+        int avgScore     = (int)(sumScore   / daysWithReport);
+        int avgTime      = (int)(sumTime    / daysWithReport);
+        int avgLatency   = (int)(sumLatency / daysWithReport);
+        int avgLight     = (int)(sumLight   / daysWithReport);
+        int avgRem       = (int)(sumRem     / daysWithReport);
+        int avgDeep      = (int)(sumDeep    / daysWithReport);
+        int avgAwake     = (int)(sumAwake   / daysWithReport);
+        int avgCycles    = (int)(sumCycles  / daysWithReport);
 
         return SummaryResponse.builder()
                 .period(formatPeriod(req.getStartDate(), req.getEndDate()))
                 .averageSleepScore(avgScore)
                 .averageSleepTimeMinutes(avgTime)
+                .previousAverageSleepTimeMinutes(prevAvgTime)
                 .averageSleepLatencyMinutes(avgLatency)
                 .averageLightSleepMinutes(avgLight)
-                .averageLightSleepPercentage(percentage(avgLight, avgTime))
+                .averageLightSleepPercentage((int)percentage(avgLight, avgTime))
                 .averageRemSleepMinutes(avgRem)
-                .averageRemSleepPercentage(percentage(avgRem, avgTime))
+                .averageRemSleepPercentage((int)percentage(avgRem, avgTime))
                 .averageDeepSleepMinutes(avgDeep)
-                .averageDeepSleepPercentage(percentage(avgDeep, avgTime))
+                .averageDeepSleepPercentage((int)percentage(avgDeep, avgTime))
                 .averageAwakeMinutes(avgAwake)
-                .averageAwakePercentage(percentage(avgAwake, avgTime))
+                .averageAwakePercentage((int)percentage(avgAwake, avgTime))
                 .averageSleepCycleCount(avgCycles)
                 .build();
     }
-
+    /**
+     * 요일 / 주차 / 월 단위로 그룹화한 평균치를 그래프용 시계열로 제공합니다.
+     */
     public GraphResponse graph(StatisticsRequest req){
         Integer userId = AuthUtil.getLoginUserId();
         List<SleepReport> reports = fetchReports(userId, req);
@@ -473,75 +530,10 @@ public class SleepService {
                 .build();
     }
 
-    private List<GraphResponse.TimePoint> aggregateAverage(
-            List<SleepReport> reports,
-            StatisticsRequest.PeriodType periodType,
-            Function<SleepReport, Integer> valueFn
-    ) {
-        // 1) 레이블별 리스트 수집
-        Map<String, List<Integer>> buckets = reports.stream()
-                .collect(Collectors.groupingBy(
-                        report -> makeLabel(report.getSleepTime(), periodType),
-                        LinkedHashMap::new,
-                        Collectors.mapping(valueFn, Collectors.toList())
-                ));
-        // 2) 정렬된 레이블 순서 확보
-        List<String> allLabels = switch (periodType) {
-            case WEEK -> List.of("월","화","수","목","금","토","일");
-            case MONTH -> List.of("1주","2주","3주","4주","5주");
-            case YEAR -> IntStream.rangeClosed(1,12)
-                    .mapToObj(i -> i + "월")
-                    .toList();
-        };
 
-
-        // 3) 평균으로 변환
-        return allLabels.stream()
-                .filter(buckets::containsKey)  // 결측 레이블(리포트 없는 주/월/년)은 건너뜀
-                .map(label -> {
-                    List<Integer> vals = buckets.get(label);
-                    float avg = (float) vals.stream()
-                            .mapToInt(Integer::intValue)
-                            .average()
-                            .orElse(0.0);
-                    return new GraphResponse.TimePoint(label, avg);
-                })
-                .collect(Collectors.toList());
-    }
-
-
-    // 레이블 생성 (WEEK→요일, MONTH→몇 주차, YEAR→몇 월)
-    private String makeLabel(LocalDateTime dt, StatisticsRequest.PeriodType type) {
-        return switch (type) {
-            case WEEK -> {
-                DayOfWeek dow = dt.getDayOfWeek();
-                yield dow.getDisplayName(TextStyle.SHORT, Locale.KOREAN);
-            }
-            case MONTH -> {
-                int weekOfMonth = ((dt.getDayOfMonth() - 1) / 7) + 1;
-                yield weekOfMonth + "주";
-            }
-            case YEAR -> dt.getMonthValue() + "월";
-        };
-    }
-    public List<SleepReport> fetchReports(Integer userId, StatisticsRequest req){
-        LocalDateTime startDate = req.getStartDate().atStartOfDay();
-        LocalDateTime endDate = req.getEndDate().atStartOfDay();
-        return sleepReportRepository.findByUserIdAndSleepTimeBetween(userId, startDate, endDate);
-    }
-
-    private String formatPeriod(java.time.LocalDate s, java.time.LocalDate e) {
-        DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy.MM.dd");
-        return fmt.format(s) + " ~ " + fmt.format(e);
-    }
-
-    private float percentage(double part, double total) {
-        if (total <= 0) {
-            return 0;
-        }
-        return (int) Math.round(part / total * 100);
-    }
-
+    /**
+     * Summary + 연령·성별 평균치(사전 입력된 통계 테이블) 묶음 반환.
+     */
     public CombinedStatResponse getCombinedStats(StatisticsRequest req){
         SummaryResponse summary = summarize(req);
 
@@ -582,6 +574,112 @@ public class SleepService {
                 .map(report -> report.getSleepTime().toLocalDate())
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    private List<SleepReport> fetchReports(Integer userId, StatisticsRequest req){
+        LocalDateTime startDate = req.getStartDate().atStartOfDay();
+        LocalDateTime endDate = req.getEndDate().atStartOfDay();
+        return sleepReportRepository.findByUserIdAndSleepTimeBetween(userId, startDate, endDate);
+    }
+
+    private SleepPredictionResult predict(BioData data) {
+        double gyroMagnitude = Math.sqrt(
+                Math.pow(data.getGyroX(), 2) +
+                        Math.pow(data.getGyroY(), 2) +
+                        Math.pow(data.getGyroZ(), 2)
+        );
+
+        String level;
+        int score;
+
+        if (gyroMagnitude > 4.0) {
+            level = "AWAKE";
+            score = random(5, 20);
+        } else if (data.getHeartRate() < 60 && data.getBodyTemperature() < 36.0) {
+            level = "NREM3";
+            score = random(90, 100);
+        } else if (data.getHeartRate() < 70) {
+            level = "NREM2";
+            score = random(70, 90);
+        } else {
+            level = "REM";
+            score = random(60, 80);
+        }
+
+        return new SleepPredictionResult(level, score, data.getMeasuredAt());
+    }
+
+    private int random(int min, int max) {
+        return new Random().nextInt(max - min + 1) + min;
+    }
+
+    private int toMinutes(LocalDateTime from, LocalDateTime to) {
+        return (int) java.time.Duration.between(from, to).toMinutes();
+    }
+
+    private List<GraphResponse.TimePoint> aggregateAverage(
+            List<SleepReport> reports,
+            StatisticsRequest.PeriodType periodType,
+            Function<SleepReport, Integer> valueFn
+    ) {
+        // 1) 레이블별 리스트 수집
+        Map<String, List<Integer>> buckets = reports.stream()
+                .collect(Collectors.groupingBy(
+                        report -> makeLabel(report.getSleepTime(), periodType),
+                        LinkedHashMap::new,
+                        Collectors.mapping(valueFn, Collectors.toList())
+                ));
+        // 2) 정렬된 레이블 순서 확보
+        List<String> allLabels = switch (periodType) {
+            case WEEK -> List.of("월","화","수","목","금","토","일");
+            case MONTH -> List.of("1주","2주","3주","4주","5주");
+            case YEAR -> IntStream.rangeClosed(1,12)
+                    .mapToObj(i -> i + "월")
+                    .toList();
+        };
+
+
+        // 3) 평균으로 변환
+        return allLabels.stream()
+                .filter(buckets::containsKey)  // 결측 레이블(리포트 없는 주/월/년)은 건너뜀
+                .map(label -> {
+                    List<Integer> vals = buckets.get(label);
+                    float avg = (float) vals.stream()
+                            .mapToInt(Integer::intValue)
+                            .average()
+                            .orElse(0.0);
+                    return new GraphResponse.TimePoint(label, avg);
+                })
+                .toList();
+    }
+
+    // 레이블 생성 (WEEK→요일, MONTH→몇 주차, YEAR→몇 월)
+    private String makeLabel(LocalDateTime dt, StatisticsRequest.PeriodType type) {
+        return switch (type) {
+            case WEEK -> {
+                DayOfWeek dow = dt.getDayOfWeek();
+                yield dow.getDisplayName(TextStyle.SHORT, Locale.KOREAN);
+            }
+            case MONTH -> {
+                int weekOfMonth = ((dt.getDayOfMonth() - 1) / 7) + 1;
+                yield weekOfMonth + "주";
+            }
+            case YEAR -> dt.getMonthValue() + "월";
+        };
+    }
+
+
+    private String formatPeriod(java.time.LocalDate s, java.time.LocalDate e) {
+        DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy.MM.dd");
+        return fmt.format(s) + " ~ " + fmt.format(e);
+    }
+
+    private float percentage(double part, double total) {
+        if (total <= 0) {
+            return 0;
+        }
+        return (int) Math.round(part / total * 100);
+    }
+
 }
